unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/zkfedex__ShipmatePreference__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkfedex__shipmatePreferenceHelp</customHelpPage>
    <description>Shipmate Preferences store your FedEx Account number which is associated to all of your FedEx shipments.</description>
    <label>FedEx Shipmate Preference</label>
    <nameField>
        <displayFormat>ShipmatePreference-{0000}</displayFormat>
        <label>Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Shipmate Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>