unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__AccountIsSetupForSmartPostReturns__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AccountIsSetupForSmartPostReturns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that your FedEx account is setup for SmartPost return shipping. Please contact FedEx if you are unsure if your FedEx account is setup for SmartPost return shipping.</description>
    <inlineHelpText>This indicates that your FedEx account is setup for SmartPost return shipping. Please contact FedEx if you are unsure if your FedEx account is setup for SmartPost return shipping.</inlineHelpText>
    <label>Account is Setup for SmartPost Returns</label>
    <type>Checkbox</type>
</CustomField>