unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__AutoWeighPackage__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AutoWeighPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto Weigh Package using Scale</description>
    <inlineHelpText>Auto Weigh Package using Scale</inlineHelpText>
    <label>Auto Weigh Package</label>
    <type>Checkbox</type>
</CustomField>