unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__BillingCity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillingCity__c</fullName>
    <label>Billing City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>