unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillingCountry__c</fullName>
    <label>Billing Country</label>
    <length>35</length>
    <type>Text</type>
</CustomField>