unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillingPostalCode__c</fullName>
    <label>Billing Zip/Postal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>