unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__BillingState__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillingState__c</fullName>
    <label>Billing State</label>
    <length>14</length>
    <type>Text</type>
</CustomField>