unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BillingStreet__c</fullName>
    <description>Can enter up to 2 separate lines.
Each line can be 35 characters at most.</description>
    <inlineHelpText>Can enter up to 2 separate lines.
Each line can be 35 characters at most.</inlineHelpText>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>