unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__DefaultEmailSendTo__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DefaultEmailSendTo__c</fullName>
    <label>Default Email Send To</label>
    <length>10</length>
    <type>Text</type>
</CustomField>