unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__DefaultLetterHeadImage__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DefaultLetterHeadImage__c</fullName>
    <label>Default LetterHead Image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>