unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__DefaultSignatureImage__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DefaultSignatureImage__c</fullName>
    <label>Default Signature Image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>