unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__DetailedViewReUsePackageList__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DetailedViewReUsePackageList__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This option allows you to display more details in the drop down list when selecting a Package Profile for ReUse in the Shipping Wizard. This drop down list only appears on Package section of the Shipping Wizard if a saved Package for ReUse exists.</description>
    <inlineHelpText>This option allows you to display more details in the drop down list when selecting a Package Profile for ReUse in the Shipping Wizard. This drop down list only appears on Package section of the Shipping Wizard if a saved Package for ReUse exists.</inlineHelpText>
    <label>Detailed View - ReUse Package List</label>
    <type>Checkbox</type>
</CustomField>