unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__DocPrinterId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DocPrinterId__c</fullName>
    <label>DocPrinterId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>