unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__EmailLabelReplyToEmailDefault__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailLabelReplyToEmailDefault__c</fullName>
    <description>For completed Shipments, this will be the default reply-to email address when sending shipping labels via email</description>
    <inlineHelpText>For completed Shipments, this will be the default reply-to email address when sending shipping labels via email</inlineHelpText>
    <label>Email Label Reply-To Email Default</label>
    <type>Email</type>
</CustomField>