unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__EmailLabelSenderDisplayNameDefault__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailLabelSenderDisplayNameDefault__c</fullName>
    <description>For completed Shipments, this will be the default sender display name when sending shipping labels via email</description>
    <inlineHelpText>For completed Shipments, this will be the default sender display name when sending shipping labels via email</inlineHelpText>
    <label>Email Label Sender Display Name Default</label>
    <length>100</length>
    <type>Text</type>
</CustomField>