unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__EmailLabelSubjectLineDefault__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EmailLabelSubjectLineDefault__c</fullName>
    <description>For completed Shipments, this will be the default email subject line when sending shipping labels via email</description>
    <inlineHelpText>For completed Shipments, this will be the default email subject line when sending shipping labels via email</inlineHelpText>
    <label>Email Label Subject Line Default</label>
    <length>150</length>
    <type>Text</type>
</CustomField>