unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__EMailMessageDefault__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EMailMessageDefault__c</fullName>
    <label>Email Message Default</label>
    <type>TextArea</type>
</CustomField>