unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__EMailNotifyOnDeliveryDefault__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EMailNotifyOnDeliveryDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A notification is already emailed when shipped. If checked, the default action will be to also send the FedEx Email notification when the shipment is delivered.</description>
    <inlineHelpText>A notification is already emailed when shipped. If checked, the default action will be to also send the FedEx Email notification when the shipment is delivered.</inlineHelpText>
    <label>Email Notify on Delivery Default</label>
    <type>Checkbox</type>
</CustomField>