unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__EMailNotifyOnExceptionDefault__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EMailNotifyOnExceptionDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A notification is already emailed when shipped. If checked, the default action will be to also send the FedEx Email notification when an shipping exception occurs.</description>
    <inlineHelpText>A notification is already emailed when shipped. If checked, the default action will be to also send the FedEx Email notification when an shipping exception occurs.</inlineHelpText>
    <label>Email Notify on Exception Default</label>
    <type>Checkbox</type>
</CustomField>