unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__EncryptedFedExMeterNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EncryptedFedExMeterNumber__c</fullName>
    <label>Encrypted FedEx Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>