unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__EncryptedGenericFedExEndUserPasswd__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EncryptedGenericFedExEndUserPasswd__c</fullName>
    <label>Encrypted Generic FedEx End User Passwd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>