unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__FedExAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FedExAccountNumber__c</fullName>
    <label>FedEx Account Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>