unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__FedExMeterNumber__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FedExMeterNumber__c</fullName>
    <label>FedEx Meter Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>