unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__GenericCredentialsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__GenericCredentialsEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Credentials Encrypted</label>
    <type>Checkbox</type>
</CustomField>