unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__GenericFedExEndUserKey__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__GenericFedExEndUserKey__c</fullName>
    <label>Generic FedEx End User Key</label>
    <length>16</length>
    <type>Text</type>
</CustomField>