unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__GenericFedExEndUserPassword__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__GenericFedExEndUserPassword__c</fullName>
    <label>Generic FedEx End User Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>