unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__LastClosePerformedAt__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LastClosePerformedAt__c</fullName>
    <label>Last Close Performed At</label>
    <type>DateTime</type>
</CustomField>