unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__LastCloseTimestamp__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LastCloseTimestamp__c</fullName>
    <label>Last Close Date/Time</label>
    <type>DateTime</type>
</CustomField>