unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__LastVersionCaptureTime__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__LastVersionCaptureTime__c</fullName>
    <description>The last successful time 'version capture' was performed.</description>
    <inlineHelpText>The last successful time 'version capture' was performed.</inlineHelpText>
    <label>Last Version Capture Time</label>
    <type>DateTime</type>
</CustomField>