unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__OrgWideAddress__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__OrgWideAddress__c</fullName>
    <label>Org Wide Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>