unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__PickupBuildingType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupBuildingType__c</fullName>
    <label>Pickup Building Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>