unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__PickupCloseTimeHour__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupCloseTimeHour__c</fullName>
    <label>Pickup Close Time Hour</label>
    <length>5</length>
    <type>Text</type>
</CustomField>