unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__PickupCourierRemarks__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupCourierRemarks__c</fullName>
    <label>Pickup Courier Remarks</label>
    <type>TextArea</type>
</CustomField>