unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__PickupPackageLocation__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PickupPackageLocation__c</fullName>
    <label>Pickup Package Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>