unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__ScaleComputerId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScaleComputerId__c</fullName>
    <label>Scale Computer Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>