unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__ScaleDeviceId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ScaleDeviceId__c</fullName>
    <label>Scale Device Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>