unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__SendEMailNotificationToRecipient__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SendEMailNotificationToRecipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the default action will be to send the FedEx Email notification to the recipient. For return shipments, it will be sent to the "Return From" address.</description>
    <inlineHelpText>If checked, the default action will be to send the FedEx Email notification to the recipient. For return shipments, it will be sent to the "Return From" address.</inlineHelpText>
    <label>Send Email Notification to Recipient</label>
    <type>Checkbox</type>
</CustomField>