unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShippingCity__c</fullName>
    <label>Shipping City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>