unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__ShippingIsResidential__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShippingIsResidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Is Residential</label>
    <type>Checkbox</type>
</CustomField>