unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__ShippingState__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ShippingState__c</fullName>
    <label>Shipping State</label>
    <length>14</length>
    <type>Text</type>
</CustomField>