unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__SmartPostHubId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SmartPostHubId__c</fullName>
    <label>SmartPost Hub ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>