unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__SubscriptionDataEncrypted__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SubscriptionDataEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Data Encrypted</label>
    <type>Checkbox</type>
</CustomField>