unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__ThermalPrinterName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ThermalPrinterName__c</fullName>
    <description>Specify if using a Thermal printer. The name given to the printer when installed. In Windows, this is the name listed for your thermal printer under "Printers and Faxes".</description>
    <inlineHelpText>Specify if using a Thermal printer. The name given to the printer when installed. In Windows, this is the name listed for your thermal printer under "Printers and Faxes".</inlineHelpText>
    <label>Thermal Printer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>