unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__ThermalPrinterProvider__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ThermalPrinterProvider__c</fullName>
    <label>Thermal Printer Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Print Node</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>