unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__ThermalPrinterTray__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ThermalPrinterTray__c</fullName>
    <label>Thermal Printer Tray</label>
    <length>255</length>
    <type>Text</type>
</CustomField>