unpackaged/main/default/objects/zkfedex__ShipmatePreference__c/fields/zkfedex__VersionCaptureReminderSet__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__VersionCaptureReminderSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Version Capture Reminder Set</label>
    <type>Checkbox</type>
</CustomField>